add animation en/el

--- a/src/includes/layout.html
+++ b/src/includes/layout.html
@@ -39,8 +39,10 @@
     {{ content | safe }}
 
     {% include "footer.html" %}
+    
 
     <script src="/js/algorithms/Bottom-up_reveal.js"></script>
+    <script src="/js/algorithms/Language-transition.js"></script>
     <script src="/js/script.js"></script>
     <script src="/js/header.js"></script>
     <script src="/js/home.js"></script>
