--- a/src/css/components/header.css
+++ b/src/css/components/header.css
@@ -140,7 +140,7 @@
     width: 470px;
     max-width: 100%;
     transform: translateX(100%);
-    transition: transform .72s cubic-bezier(0.77, 0, 0.175, 1);
+    transition: transform .72s cubic-bezier(0.77,0,0.175,1);
     will-change: transform;
 }
 .header-menu__nav {
@@ -181,7 +181,6 @@
     padding: 24px;
     position: relative;
     width: 100%;
-    border-bottom: 1px solid var(--color-gray-900);
 }
 .header-menu__title {
     place-content: center flex-start;
@@ -395,7 +394,8 @@
     height: 1px;
     background: var(--color-gray-900, rgb(88, 88, 88));
     border-radius: 0px;
-    transition: width 1s cubic-bezier(0.4, 0, 0.2, 1) 0.2s;
+    transform: translateX(0%);
+    transform-origin:0% 0%;
 }
 
 
