--- a/src/includes/header.html
+++ b/src/includes/header.html
@@ -35,7 +35,7 @@
 
     <nav class="nav">
         <div class="nav__logo">
-            <a href=""><img src="/img/logo.svg" alt=""></a>
+            <a href="/"><img src="/img/logo.svg" alt=""></a>
         </div>
 
         <div class="nav__right">
