--- a/src/includes/layout.html
+++ b/src/includes/layout.html
@@ -23,7 +23,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Geist:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/global.css">
     {% if pageCss %}<link rel="stylesheet" href="{{ pageCss }}">{% endif %}
-    <link rel="stylesheet" href="/css/components/header.css">
+
 
     <script src="/vendor/lenis/lenis.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3/dist/gsap.min.js"></script>
@@ -54,11 +54,11 @@
     </div>
 
     <div class="fake-body">
-        {% include "header.html" %}
+        {% include "components/header.html" %}
 
         {{ content | safe }}
 
-        {% include "footer.html" %}
+        {% include "components/footer.html" %}
     </div>
 
     <div class="lm-float">
