--- a/src/includes/components/header.html
+++ b/src/includes/components/header.html
@@ -32,10 +32,27 @@
 
         <div class="nav__right">
             <div class="nav__label">
-                <div class="lang-switch">
+                <!-- <div class="lang-switch">
                     <a href="{{ enUrl }}"{% if lang == 'en' %} aria-current="page"{% endif %} class="text-16 lang-switch-link">EN</a>
                     <a href="{{ elUrl }}"{% if lang == 'el' %} aria-current="page"{% endif %} class="text-16 lang-switch-link">EL</a>
+                </div> -->
+
+                <div class="nav__meta-item">
+                    <div class="nav-circle">
+                        <div class="nav-circle--state"></div>
+                        <div class="nav-circle--active"></div>
+                    </div>
+                    <div class="nav__mate-text-wrap">
+                        <p class="nav__meta-h">Available for project</p>
+                        <p class="nav__meta-text">EARLY FEB 2025</p>
+                    </div>
                 </div>
+
+                <div class="nav__meta-item-clock">
+                    <div class="nav__meta-value">1:16 PM</div>
+                    <p class="nav__meta-text">(GMT+7)</p>
+                </div>
+
             </div>
 
             <div class="nav__actions">
