--- a/src/includes/layout.html
+++ b/src/includes/layout.html
@@ -79,5 +79,6 @@
     <script src="/js/script.js"></script>
     <script src="/js/home.js"></script>
     <script src="/js/header.js"></script>
+    <script src="/js/footer.js"></script>
     </body>
 </html>
