--- a/src/includes/components/faq.html
+++ b/src/includes/components/faq.html
@@ -1,7 +1,7 @@
 <link rel="stylesheet" href="/css/components/faq.css">
 
 <section class="faq">
-    <div class="faq__bg"><img src="img/home/why-us-bg.jpg" alt="faq image bg"></div>
+    <div class="faq__bg"><img src="/img/home/why-us-bg.jpg" alt="faq image bg"></div>
     <div class="faq__container">
         <div class="faq__header">
             <h2 class="text-140 faq__title">FAQ</h2>
