--- a/src/includes/layout.html
+++ b/src/includes/layout.html
@@ -32,7 +32,7 @@
     <script src="https://cdn.jsdelivr.net/npm/gsap@3/dist/SplitText.min.js"></script>
   </head>
 
-  <body>
+  <body class="{% if page.url == '/' or page.url == '/el/' %}is-home{% endif %}">
 
     <div class="loader">
         <svg class="loader-svg"  viewBox="0 0 223 37" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -77,7 +77,6 @@
     <script src="/js/algorithms/Hover-block.js"></script>
     <script src="/js/algorithms/Language-transition.js"></script>
     <script src="/js/script.js"></script>
-    <script src="/js/home.js"></script>
     <script src="/js/header.js"></script>
     <script src="/js/footer.js"></script>
     </body>
