--- a/src/includes/components/faq.html
+++ b/src/includes/components/faq.html
@@ -30,7 +30,7 @@
                     <h3 class="faq__question-title">How long does a project usually take?</h3>
                     <div class="faq__toggle">
                         <div class="faq__toggle-line"></div>
-                        <div class="faq__toggle-line"></div>
+                        <div class="faq__toggle-line faq__toggle--line-animation"></div>
                     </div>
                 </div>
                 <div class="faq__answer">
@@ -44,7 +44,7 @@
                     <h3 class="faq__question-title">Do you offer packages or custom quotes?</h3>
                     <div class="faq__toggle">
                         <div class="faq__toggle-line"></div>
-                        <div class="faq__toggle-line"></div>
+                        <div class="faq__toggle-line faq__toggle--line-animation"></div>
                     </div>
                 </div>
                 <div class="faq__answer">
@@ -58,7 +58,7 @@
                     <h3 class="faq__question-title">What’s included in a branding package?</h3>
                     <div class="faq__toggle">
                         <div class="faq__toggle-line"></div>
-                        <div class="faq__toggle-line"></div>
+                        <div class="faq__toggle-line faq__toggle--line-animation"></div>
                     </div>
                 </div>
                 <div class="faq__answer">
@@ -71,7 +71,7 @@
                     <h3 class="faq__question-title">Can you work with our existing dev or marketing team?</h3>
                     <div class="faq__toggle">
                         <div class="faq__toggle-line"></div>
-                        <div class="faq__toggle-line"></div>
+                        <div class="faq__toggle-line faq__toggle--line-animation"></div>
                     </div>
                 </div>
                 <div class="faq__answer">
