--- a/src/includes/components/footer.html
+++ b/src/includes/components/footer.html
@@ -22,13 +22,13 @@
                         <div class="footer__links">
                             <p class="footer__label">(LINKS)</p>
                             <div class="footer__menu">
-                                <a class="footer__link" href="">Home</a>
-                                <a class="footer__link" href="">About</a>
-                                <a class="footer__link" href="">Works</a>
-                                <a class="footer__link" href="">Contact</a>
-                                <a class="footer__link" href="">Blog</a>
-                                <a class="footer__link" href="">404</a>
-                                <a class="footer__link" href="">Waitlist</a>
+                                <a class="footer__link" href="{{ '/' }}">Home</a>
+                                <a class="footer__link" href="{{ '/about' }}">About</a>
+                                <a class="footer__link" href="{{ '/works' }}">Works</a>
+                                <a class="footer__link" href="{{ '/contact' }}">Contact</a>
+                                <a class="footer__link" href="{{ '/blog' }}">Blog</a>
+                                <a class="footer__link" href="{{ '/404' }}">404</a>
+                                <a class="footer__link" href="{{ '/waitlist' }}">Waitlist</a>
                             </div>
                         </div>
                         <div class="footer__socials">
