--- a/src/css/components/post.css
+++ b/src/css/components/post.css
@@ -1,3 +1,4 @@
+
 .blog-post {
     background-color: var(--color-black);
     z-index: 2;
@@ -12,6 +13,7 @@
     display: flex;
     position: relative;
     overflow: visible;
+    
 }
 .blog-post__container {
     flex-flow: column;
@@ -39,6 +41,7 @@
     display: flex;
     position: relative;
     overflow: visible;
+    opacity: 0;
 }
 .blog-post__header-main {
     flex-flow: column;
@@ -82,6 +85,7 @@
     flex: 1 0 0;
     width: 1px;
 }
+.br-mask{width: 100%;}
 .blog-post__divider {
     z-index: 1;
     flex: none;
@@ -89,6 +93,8 @@
     height: 1px;
     position: relative;
     background-color: var(--color-gray-900);
+    transform: scaleX(0%);
+    transform-origin:0%;
 }
 .blog-post__meta {
     flex-flow: row;
@@ -146,6 +152,7 @@
 .blog-post__hero-wrapper{
     position: absolute;
     inset: -100px 0 0;
+    will-change: transform;
 }
 .blog-post__hero-image {
     display: block;
@@ -154,6 +161,8 @@
     border-radius: inherit;
     object-position: center;
     object-fit: cover;
+    transform: scale(1.3);
+    will-change: transform;
 }
 .blog-post__content {
     word-break: break-word;
@@ -163,7 +172,7 @@
     height: auto;
     position: relative;
 }
-.blog-post__heading {
+.blog-post__content h3 {
     margin-top:40px;
     font-size: 32px;
     font-weight: 600;
@@ -171,7 +180,7 @@
     line-height:100%;
     color: var(--color-gray-600);
 }
-.blog-post__text {
+.blog-post__content p {
     margin-top:20px;
     font-size: 24px;
     font-weight: 500;
@@ -323,7 +332,6 @@
     padding: 0;
     display: flex;
     position: relative;
-    overflow: hidden;
 }
 .post-more__top{
         flex-flow: row;
@@ -366,6 +374,7 @@
     .post__list{grid-template-columns: repeat(2, minmax(50px, 1fr));}
 }
 @media screen and (max-width: 801px) {
+    .post-more__title{flex: none;width: 100%;}
     .blog-post__title{font-size: 40px;}
     .blog-post{padding: 150px var(--padding) 100px;}
     .post-more{padding: 100px var(--padding)}
