--- a/src/includes/components/footer.html
+++ b/src/includes/components/footer.html
@@ -1,5 +1,6 @@
 {% set lang = lang | default(locales.default) %}
-{% set t = (i18n.main[lang] if i18n and i18n.main and i18n.main[lang] else {}) %}
+{% set base = '' if lang == locales.default else '/' + lang %}
+{% set t = (i18n.footer[lang] if i18n and i18n.footer and i18n.footer[lang] else {}) %}
 
 <link rel="stylesheet" href="/css/components/footer.css">
 
@@ -9,48 +10,48 @@
             <div class="footer__top">
                 <div class="footer__contacts">
                     <div class="footer__contact">
-                        <p class="footer__label">(email)</p>
-                        <a class="footer__value-email" href="">hello@nakula.com</a>
+                        <p class="footer__label">{{ t.email }}</p>
+                        <a class="footer__value-email" href="">{{ t.hellonakulacom }}</a>
                     </div>
                     <div class="footer__contact">
-                        <p class="footer__label">(phone)</p>
+                        <p class="footer__label">{{ t.phone }}</p>
                         <a class="footer__value-phone" href="">+12 345678</a>
                     </div>
                 </div>
                 <div class="footer__right">
                     <div class="footer__nav">
                         <div class="footer__links">
-                            <p class="footer__label">(LINKS)</p>
+                            <p class="footer__label">{{ t.links }}</p>
                             <div class="footer__menu">
-                                <a class="footer__link" href="{{ '/' }}">Home</a>
-                                <a class="footer__link" href="{{ '/about' }}">About</a>
-                                <a class="footer__link" href="{{ '/works' }}">Works</a>
-                                <a class="footer__link" href="{{ '/contact' }}">Contact</a>
-                                <a class="footer__link" href="{{ '/blog' }}">Blog</a>
-                                <a class="footer__link" href="{{ '/404' }}">404</a>
-                                <a class="footer__link" href="{{ '/waitlist' }}">Waitlist</a>
+                                <a class="footer__link" href="{{ base }}/">{{ t.home }}</a>
+                                <a class="footer__link" href="{{ base }}/about/">{{ t.about }}</a>
+                                <a class="footer__link" href="{{ base }}/works/">{{ t.works }}</a>
+                                <a class="footer__link" href="{{ base }}/contact/">{{ t.contact }}</a>
+                                <a class="footer__link" href="{{ base }}/blog/">{{ t.blog }}</a>
+                                <a class="footer__link" href="{{ base }}/404/">404</a>
+                                <a class="footer__link" href="{{ base }}/waitlist/">{{ t.waitlist }}</a>
                             </div>
                         </div>
                         <div class="footer__socials">
-                            <p class="footer__label">(SOCIALS)</p>
+                            <p class="footer__label">{{ t.socials }}</p>
                             <div class="footer__social-list">
                                 <a class="footer__social-link" href="">
-                                    <div class="footer__social-item">X/Twitter <svg width="11" height="11" class="footer__social-icon" viewBox="0 0 11 11" fill="none" xmlns="http://www.w3.org/2000/svg"> <path d="M0.704711 9.59487C0.636407 9.52661 0.582222 9.44555 0.545254 9.35635C0.508285 9.26714 0.489258 9.17152 0.489258 9.07495C0.489258 8.97839 0.508285 8.88277 0.545254 8.79356C0.582222 8.70435 0.636407 8.6233 0.704711 8.55504L9.0351 0.224643C9.10288 0.154408 9.18396 0.0983749 9.27362 0.0598108C9.36328 0.0212467 9.45972 0.00092468 9.55731 3.0886e-05C9.65491 -0.000862908 9.75171 0.0176892 9.84206 0.0546048C9.93241 0.0915204 10.0145 0.146061 10.0835 0.215042C10.1526 0.284024 10.2072 0.366065 10.2442 0.456381C10.2812 0.546696 10.2999 0.643476 10.2991 0.741073C10.2983 0.838671 10.278 0.935131 10.2395 1.02483C10.2011 1.11452 10.1451 1.19565 10.0749 1.26349L1.74454 9.59389C1.60672 9.73153 1.4199 9.80885 1.22512 9.80885C1.03033 9.80885 0.84351 9.73153 0.705691 9.59389L0.704711 9.59487Z" fill="none"/> <path d="M0 0.74461C0 0.549666 0.0774408 0.362707 0.215287 0.224861C0.353132 0.0870154 0.540091 0.00957504 0.735035 0.00957504L9.55545 0.00957504C9.75039 0.00957504 9.93735 0.0870154 10.0752 0.224861C10.213 0.362707 10.2905 0.549666 10.2905 0.74461L10.2905 9.56503C10.2905 9.75997 10.213 9.94693 10.0752 10.0848C9.93735 10.2226 9.75039 10.3001 9.55545 10.3001C9.36051 10.3001 9.17355 10.2226 9.0357 10.0848C8.89786 9.94693 8.82042 9.75997 8.82042 9.56503L8.82042 1.47964L0.735035 1.47964C0.540091 1.47964 0.353132 1.4022 0.215287 1.26436C0.0774408 1.12651 0 0.939553 0 0.74461Z" fill="none"/> </svg></div>
+                                    <div class="footer__social-item">{{ t.xtwitter }} <svg width="11" height="11" class="footer__social-icon" viewBox="0 0 11 11" fill="none" xmlns="http://www.w3.org/2000/svg"> <path d="M0.704711 9.59487C0.636407 9.52661 0.582222 9.44555 0.545254 9.35635C0.508285 9.26714 0.489258 9.17152 0.489258 9.07495C0.489258 8.97839 0.508285 8.88277 0.545254 8.79356C0.582222 8.70435 0.636407 8.6233 0.704711 8.55504L9.0351 0.224643C9.10288 0.154408 9.18396 0.0983749 9.27362 0.0598108C9.36328 0.0212467 9.45972 0.00092468 9.55731 3.0886e-05C9.65491 -0.000862908 9.75171 0.0176892 9.84206 0.0546048C9.93241 0.0915204 10.0145 0.146061 10.0835 0.215042C10.1526 0.284024 10.2072 0.366065 10.2442 0.456381C10.2812 0.546696 10.2999 0.643476 10.2991 0.741073C10.2983 0.838671 10.278 0.935131 10.2395 1.02483C10.2011 1.11452 10.1451 1.19565 10.0749 1.26349L1.74454 9.59389C1.60672 9.73153 1.4199 9.80885 1.22512 9.80885C1.03033 9.80885 0.84351 9.73153 0.705691 9.59389L0.704711 9.59487Z" fill="none"/> <path d="M0 0.74461C0 0.549666 0.0774408 0.362707 0.215287 0.224861C0.353132 0.0870154 0.540091 0.00957504 0.735035 0.00957504L9.55545 0.00957504C9.75039 0.00957504 9.93735 0.0870154 10.0752 0.224861C10.213 0.362707 10.2905 0.549666 10.2905 0.74461L10.2905 9.56503C10.2905 9.75997 10.213 9.94693 10.0752 10.0848C9.93735 10.2226 9.75039 10.3001 9.55545 10.3001C9.36051 10.3001 9.17355 10.2226 9.0357 10.0848C8.89786 9.94693 8.82042 9.75997 8.82042 9.56503L8.82042 1.47964L0.735035 1.47964C0.540091 1.47964 0.353132 1.4022 0.215287 1.26436C0.0774408 1.12651 0 0.939553 0 0.74461Z" fill="none"/> </svg></div>
                                 </a>
                                 <a class="footer__social-link" href="">
-                                    <div class="footer__social-item">Instagram <svg width="11" height="11" class="footer__social-icon" viewBox="0 0 11 11" fill="none" xmlns="http://www.w3.org/2000/svg"> <path d="M0.704711 9.59487C0.636407 9.52661 0.582222 9.44555 0.545254 9.35635C0.508285 9.26714 0.489258 9.17152 0.489258 9.07495C0.489258 8.97839 0.508285 8.88277 0.545254 8.79356C0.582222 8.70435 0.636407 8.6233 0.704711 8.55504L9.0351 0.224643C9.10288 0.154408 9.18396 0.0983749 9.27362 0.0598108C9.36328 0.0212467 9.45972 0.00092468 9.55731 3.0886e-05C9.65491 -0.000862908 9.75171 0.0176892 9.84206 0.0546048C9.93241 0.0915204 10.0145 0.146061 10.0835 0.215042C10.1526 0.284024 10.2072 0.366065 10.2442 0.456381C10.2812 0.546696 10.2999 0.643476 10.2991 0.741073C10.2983 0.838671 10.278 0.935131 10.2395 1.02483C10.2011 1.11452 10.1451 1.19565 10.0749 1.26349L1.74454 9.59389C1.60672 9.73153 1.4199 9.80885 1.22512 9.80885C1.03033 9.80885 0.84351 9.73153 0.705691 9.59389L0.704711 9.59487Z" fill="none"/> <path d="M0 0.74461C0 0.549666 0.0774408 0.362707 0.215287 0.224861C0.353132 0.0870154 0.540091 0.00957504 0.735035 0.00957504L9.55545 0.00957504C9.75039 0.00957504 9.93735 0.0870154 10.0752 0.224861C10.213 0.362707 10.2905 0.549666 10.2905 0.74461L10.2905 9.56503C10.2905 9.75997 10.213 9.94693 10.0752 10.0848C9.93735 10.2226 9.75039 10.3001 9.55545 10.3001C9.36051 10.3001 9.17355 10.2226 9.0357 10.0848C8.89786 9.94693 8.82042 9.75997 8.82042 9.56503L8.82042 1.47964L0.735035 1.47964C0.540091 1.47964 0.353132 1.4022 0.215287 1.26436C0.0774408 1.12651 0 0.939553 0 0.74461Z" fill="none"/> </svg></div>
+                                    <div class="footer__social-item">{{ t.instagram }} <svg width="11" height="11" class="footer__social-icon" viewBox="0 0 11 11" fill="none" xmlns="http://www.w3.org/2000/svg"> <path d="M0.704711 9.59487C0.636407 9.52661 0.582222 9.44555 0.545254 9.35635C0.508285 9.26714 0.489258 9.17152 0.489258 9.07495C0.489258 8.97839 0.508285 8.88277 0.545254 8.79356C0.582222 8.70435 0.636407 8.6233 0.704711 8.55504L9.0351 0.224643C9.10288 0.154408 9.18396 0.0983749 9.27362 0.0598108C9.36328 0.0212467 9.45972 0.00092468 9.55731 3.0886e-05C9.65491 -0.000862908 9.75171 0.0176892 9.84206 0.0546048C9.93241 0.0915204 10.0145 0.146061 10.0835 0.215042C10.1526 0.284024 10.2072 0.366065 10.2442 0.456381C10.2812 0.546696 10.2999 0.643476 10.2991 0.741073C10.2983 0.838671 10.278 0.935131 10.2395 1.02483C10.2011 1.11452 10.1451 1.19565 10.0749 1.26349L1.74454 9.59389C1.60672 9.73153 1.4199 9.80885 1.22512 9.80885C1.03033 9.80885 0.84351 9.73153 0.705691 9.59389L0.704711 9.59487Z" fill="none"/> <path d="M0 0.74461C0 0.549666 0.0774408 0.362707 0.215287 0.224861C0.353132 0.0870154 0.540091 0.00957504 0.735035 0.00957504L9.55545 0.00957504C9.75039 0.00957504 9.93735 0.0870154 10.0752 0.224861C10.213 0.362707 10.2905 0.549666 10.2905 0.74461L10.2905 9.56503C10.2905 9.75997 10.213 9.94693 10.0752 10.0848C9.93735 10.2226 9.75039 10.3001 9.55545 10.3001C9.36051 10.3001 9.17355 10.2226 9.0357 10.0848C8.89786 9.94693 8.82042 9.75997 8.82042 9.56503L8.82042 1.47964L0.735035 1.47964C0.540091 1.47964 0.353132 1.4022 0.215287 1.26436C0.0774408 1.12651 0 0.939553 0 0.74461Z" fill="none"/> </svg></div>
                                 </a>
                                 <a class="footer__social-link" href="">
-                                    <div class="footer__social-item">LinkedIn <svg width="11" height="11" class="footer__social-icon" viewBox="0 0 11 11" fill="none" xmlns="http://www.w3.org/2000/svg"> <path d="M0.704711 9.59487C0.636407 9.52661 0.582222 9.44555 0.545254 9.35635C0.508285 9.26714 0.489258 9.17152 0.489258 9.07495C0.489258 8.97839 0.508285 8.88277 0.545254 8.79356C0.582222 8.70435 0.636407 8.6233 0.704711 8.55504L9.0351 0.224643C9.10288 0.154408 9.18396 0.0983749 9.27362 0.0598108C9.36328 0.0212467 9.45972 0.00092468 9.55731 3.0886e-05C9.65491 -0.000862908 9.75171 0.0176892 9.84206 0.0546048C9.93241 0.0915204 10.0145 0.146061 10.0835 0.215042C10.1526 0.284024 10.2072 0.366065 10.2442 0.456381C10.2812 0.546696 10.2999 0.643476 10.2991 0.741073C10.2983 0.838671 10.278 0.935131 10.2395 1.02483C10.2011 1.11452 10.1451 1.19565 10.0749 1.26349L1.74454 9.59389C1.60672 9.73153 1.4199 9.80885 1.22512 9.80885C1.03033 9.80885 0.84351 9.73153 0.705691 9.59389L0.704711 9.59487Z" fill="none"/> <path d="M0 0.74461C0 0.549666 0.0774408 0.362707 0.215287 0.224861C0.353132 0.0870154 0.540091 0.00957504 0.735035 0.00957504L9.55545 0.00957504C9.75039 0.00957504 9.93735 0.0870154 10.0752 0.224861C10.213 0.362707 10.2905 0.549666 10.2905 0.74461L10.2905 9.56503C10.2905 9.75997 10.213 9.94693 10.0752 10.0848C9.93735 10.2226 9.75039 10.3001 9.55545 10.3001C9.36051 10.3001 9.17355 10.2226 9.0357 10.0848C8.89786 9.94693 8.82042 9.75997 8.82042 9.56503L8.82042 1.47964L0.735035 1.47964C0.540091 1.47964 0.353132 1.4022 0.215287 1.26436C0.0774408 1.12651 0 0.939553 0 0.74461Z" fill="none"/> </svg></div>
+                                    <div class="footer__social-item">{{ t.linkedin }} <svg width="11" height="11" class="footer__social-icon" viewBox="0 0 11 11" fill="none" xmlns="http://www.w3.org/2000/svg"> <path d="M0.704711 9.59487C0.636407 9.52661 0.582222 9.44555 0.545254 9.35635C0.508285 9.26714 0.489258 9.17152 0.489258 9.07495C0.489258 8.97839 0.508285 8.88277 0.545254 8.79356C0.582222 8.70435 0.636407 8.6233 0.704711 8.55504L9.0351 0.224643C9.10288 0.154408 9.18396 0.0983749 9.27362 0.0598108C9.36328 0.0212467 9.45972 0.00092468 9.55731 3.0886e-05C9.65491 -0.000862908 9.75171 0.0176892 9.84206 0.0546048C9.93241 0.0915204 10.0145 0.146061 10.0835 0.215042C10.1526 0.284024 10.2072 0.366065 10.2442 0.456381C10.2812 0.546696 10.2999 0.643476 10.2991 0.741073C10.2983 0.838671 10.278 0.935131 10.2395 1.02483C10.2011 1.11452 10.1451 1.19565 10.0749 1.26349L1.74454 9.59389C1.60672 9.73153 1.4199 9.80885 1.22512 9.80885C1.03033 9.80885 0.84351 9.73153 0.705691 9.59389L0.704711 9.59487Z" fill="none"/> <path d="M0 0.74461C0 0.549666 0.0774408 0.362707 0.215287 0.224861C0.353132 0.0870154 0.540091 0.00957504 0.735035 0.00957504L9.55545 0.00957504C9.75039 0.00957504 9.93735 0.0870154 10.0752 0.224861C10.213 0.362707 10.2905 0.549666 10.2905 0.74461L10.2905 9.56503C10.2905 9.75997 10.213 9.94693 10.0752 10.0848C9.93735 10.2226 9.75039 10.3001 9.55545 10.3001C9.36051 10.3001 9.17355 10.2226 9.0357 10.0848C8.89786 9.94693 8.82042 9.75997 8.82042 9.56503L8.82042 1.47964L0.735035 1.47964C0.540091 1.47964 0.353132 1.4022 0.215287 1.26436C0.0774408 1.12651 0 0.939553 0 0.74461Z" fill="none"/> </svg></div>
                                 </a>
                                 <a class="footer__social-link" href="">
-                                    <div class="footer__social-item">Behance <svg width="11" height="11" class="footer__social-icon" viewBox="0 0 11 11" fill="none" xmlns="http://www.w3.org/2000/svg"> <path d="M0.704711 9.59487C0.636407 9.52661 0.582222 9.44555 0.545254 9.35635C0.508285 9.26714 0.489258 9.17152 0.489258 9.07495C0.489258 8.97839 0.508285 8.88277 0.545254 8.79356C0.582222 8.70435 0.636407 8.6233 0.704711 8.55504L9.0351 0.224643C9.10288 0.154408 9.18396 0.0983749 9.27362 0.0598108C9.36328 0.0212467 9.45972 0.00092468 9.55731 3.0886e-05C9.65491 -0.000862908 9.75171 0.0176892 9.84206 0.0546048C9.93241 0.0915204 10.0145 0.146061 10.0835 0.215042C10.1526 0.284024 10.2072 0.366065 10.2442 0.456381C10.2812 0.546696 10.2999 0.643476 10.2991 0.741073C10.2983 0.838671 10.278 0.935131 10.2395 1.02483C10.2011 1.11452 10.1451 1.19565 10.0749 1.26349L1.74454 9.59389C1.60672 9.73153 1.4199 9.80885 1.22512 9.80885C1.03033 9.80885 0.84351 9.73153 0.705691 9.59389L0.704711 9.59487Z" fill="none"/> <path d="M0 0.74461C0 0.549666 0.0774408 0.362707 0.215287 0.224861C0.353132 0.0870154 0.540091 0.00957504 0.735035 0.00957504L9.55545 0.00957504C9.75039 0.00957504 9.93735 0.0870154 10.0752 0.224861C10.213 0.362707 10.2905 0.549666 10.2905 0.74461L10.2905 9.56503C10.2905 9.75997 10.213 9.94693 10.0752 10.0848C9.93735 10.2226 9.75039 10.3001 9.55545 10.3001C9.36051 10.3001 9.17355 10.2226 9.0357 10.0848C8.89786 9.94693 8.82042 9.75997 8.82042 9.56503L8.82042 1.47964L0.735035 1.47964C0.540091 1.47964 0.353132 1.4022 0.215287 1.26436C0.0774408 1.12651 0 0.939553 0 0.74461Z" fill="none"/> </svg></div>
+                                    <div class="footer__social-item">{{ t.behance }} <svg width="11" height="11" class="footer__social-icon" viewBox="0 0 11 11" fill="none" xmlns="http://www.w3.org/2000/svg"> <path d="M0.704711 9.59487C0.636407 9.52661 0.582222 9.44555 0.545254 9.35635C0.508285 9.26714 0.489258 9.17152 0.489258 9.07495C0.489258 8.97839 0.508285 8.88277 0.545254 8.79356C0.582222 8.70435 0.636407 8.6233 0.704711 8.55504L9.0351 0.224643C9.10288 0.154408 9.18396 0.0983749 9.27362 0.0598108C9.36328 0.0212467 9.45972 0.00092468 9.55731 3.0886e-05C9.65491 -0.000862908 9.75171 0.0176892 9.84206 0.0546048C9.93241 0.0915204 10.0145 0.146061 10.0835 0.215042C10.1526 0.284024 10.2072 0.366065 10.2442 0.456381C10.2812 0.546696 10.2999 0.643476 10.2991 0.741073C10.2983 0.838671 10.278 0.935131 10.2395 1.02483C10.2011 1.11452 10.1451 1.19565 10.0749 1.26349L1.74454 9.59389C1.60672 9.73153 1.4199 9.80885 1.22512 9.80885C1.03033 9.80885 0.84351 9.73153 0.705691 9.59389L0.704711 9.59487Z" fill="none"/> <path d="M0 0.74461C0 0.549666 0.0774408 0.362707 0.215287 0.224861C0.353132 0.0870154 0.540091 0.00957504 0.735035 0.00957504L9.55545 0.00957504C9.75039 0.00957504 9.93735 0.0870154 10.0752 0.224861C10.213 0.362707 10.2905 0.549666 10.2905 0.74461L10.2905 9.56503C10.2905 9.75997 10.213 9.94693 10.0752 10.0848C9.93735 10.2226 9.75039 10.3001 9.55545 10.3001C9.36051 10.3001 9.17355 10.2226 9.0357 10.0848C8.89786 9.94693 8.82042 9.75997 8.82042 9.56503L8.82042 1.47964L0.735035 1.47964C0.540091 1.47964 0.353132 1.4022 0.215287 1.26436C0.0774408 1.12651 0 0.939553 0 0.74461Z" fill="none"/> </svg></div>
                                 </a>
                             </div>
                         </div>
                     </div>
                     <div class="footer__newsletter">
-                        <p class="text-16 footer__description">Sign up for our newsletter to<br> get latest insights and updates</p>
+                        <p class="text-16 footer__description">{{ t.sign_up_for_our_newsletter_to }}<br> {{ t.get_latest_insights_and_updates }}</p>
                         <form class="footer__form" action="">
                             <div class="footer__field">
                                 <div class="footer__input-wrap">
@@ -60,12 +61,12 @@
                                             <input class="footer__input" type="email">
                                         </div>
                                         <div class="footer__input-placeholder">
-                                            <p class="footer__placeholder-text">Enter email address</p>
+                                            <p class="footer__placeholder-text">{{ t.enter_email_address }}</p>
                                         </div>
                                     </label>
                                 </div>
                             </div>
-                            <!-- <button class="footer__submit" type="submit">Subscribe</button> -->
+                            <!-- <button class="footer__submit" type="submit">{{ t.subscribe }}</button> -->
                             {% btn "SUBSCRIBE", "/", "footer__submit" %}
                         </form>
                     </div>
@@ -73,15 +74,15 @@
             </div>
             <div class="footer__bottom">
                 <div class="footer__bottom-inner">
-                    <p class="footer__copyright">@2025 NAKULA. All Rights Reserved</p>
+                    <p class="footer__copyright">{{ t.2025_nakula_all_rights_reserved }}</p>
                     <div class="footer__legal">
-                        <a class="footer__legal-link" href="">Privacy Policy</a>
+                        <a class="footer__legal-link" href="">{{ t.privacy_policy }}</a>
                         <div class="footer__dot"></div>
-                        <a class="footer__legal-link" href="">Terms of Service</a>
+                        <a class="footer__legal-link" href="">{{ t.terms_of_service }}</a>
                     </div>
                 </div>
                 <div class="footer__brand">
-                    <p class="footer__brand-text">MADE BY</p>
+                    <p class="footer__brand-text">{{ t.made_by }}</p>
                     <a href=""><img class="footer__brand-logo" src="/img/logo.svg" alt="logo"></a>
                 </div>
             </div>
@@ -93,7 +94,7 @@
             <img class="footer-logo" src="/img/black-logo.svg" alt="logo">
 
             <div class="footer__background-text">
-                <h3 class="text-56 footer__background-title">Beyond Visuals Built with Vision</h3>
+                <h3 class="text-56 footer__background-title">{{ t.beyond_visuals_built_with_vision }}</h3>
             </div>
         </div>
     </div>
