--- a/src/includes/components/header.html
+++ b/src/includes/components/header.html
@@ -1,5 +1,6 @@
 {% set lang = lang | default(locales.default) %}
 {% set t = i18n.main[lang] %}
+{% set h = i18n.header[lang] %}
 
 {% set base = ('' if lang == locales.default else '/' ~ lang) %}
 {% set cur = page.url %}
@@ -15,10 +16,10 @@
 {% set elUrl = '/el' ~ curNoLang %}
 
 {% set nav = [
-  { title: t.header.menu.home, href: base ~ '/' },
-  { title: t.header.menu.works, href: base ~ '/works/' },
-  { title: t.header.menu.about, href: base ~ '/about/' },
-  { title: t.header.menu.contact, href: base ~ '/contact/' }
+  { title: h.menu.home, href: base ~ '/' },
+  { title: h.menu.works, href: base ~ '/works/' },
+  { title: h.menu.about, href: base ~ '/about/' },
+  { title: h.menu.contact, href: base ~ '/contact/' }
 ] %}
 
 <link rel="stylesheet" href="/css/components/header.css">
@@ -38,8 +39,8 @@
                         <div class="nav-circle--active"></div>
                     </div>
                     <div class="nav__mate-text-wrap">
-                        <p class="nav__meta-h">Available for project</p>
-                        <p class="nav__meta-text">EARLY FEB 2025</p>
+                        <p class="nav__meta-h">{{ h.status.available }}</p>
+                        <p class="nav__meta-text">{{ h.status.date }}</p>
                     </div>
                 </div>
 
@@ -48,13 +49,13 @@
                     <p class="nav__meta-text">(GMT+7)</p>
                 </div>
                 <div class="lang-switch">
-                    <a href="{{ enUrl }}"{% if lang == 'en' %} aria-current="page"{% endif %} class="text-16 lang-switch-link">EN</a>
-                    <a href="{{ elUrl }}"{% if lang == 'el' %} aria-current="page"{% endif %} class="text-16 lang-switch-link">EL</a>
+                    <a href="{{ enUrl }}"{% if lang == 'en' %} aria-current="page"{% endif %} class="text-16 lang-switch-link">{{ h.lang.en }}</a>
+                    <a href="{{ elUrl }}"{% if lang == 'el' %} aria-current="page"{% endif %} class="text-16 lang-switch-link">{{ h.lang.el }}</a>
                 </div>
             </div>
 
             <div class="nav__actions">
-                {% btn t.header.nav.button, "/contact/", "" %}
+                {% btn h.nav.button, "/contact/", "" %}
                 <div class="nav__burger">
                     <div class="nav__burger-inner">
                         <div class="nav__bg-burger"></div>
@@ -75,7 +76,7 @@
                 <div class="header-menu__top">
                     <div class="header-menu__title">
                         <div class="header-menu__cube"></div>
-                        <p class="header-menu__label">MENU</p>
+                        <p class="header-menu__label">{{ h.menu.menu }}</p>
                     </div>
 
                     <div class="header-menu__close">
@@ -115,28 +116,28 @@
 
                 <div class="header-menu__footer">
                     <div class="header-menu__contact">
-                        <p class="header-menu__contact-label header-animation">{{ t.header.menu.email }}</p>
+                        <p class="header-menu__contact-label header-animation">{{ h.menu.email }}</p>
                         <div class="header-animation">
-                            <a href="mailto:hello@nakula.com" class="header-menu__contact-link">hello@nakula.com</a>
+                            <a href="mailto:hello@nakula.com" class="header-menu__contact-link">{{ h.contact.email }}</a>
                         </div>
                     </div>
 
                     <div class="header-menu__socials">
-                        <p class="header-menu__socials-label header-animation">{{ t.header.menu.socials }}</p>
+                        <p class="header-menu__socials-label header-animation">{{ h.menu.socials }}</p>
 
                         <div class="header-menu__socials-list">
 
                             <div class="header-menu__block">
                                 <div class="header-menu__social">
                                     <a href="#" class="header-menu__social-link header-animation">
-                                        <p class="header-menu__social-text">X/Twitter</p>
+                                        <p class="header-menu__social-text">{{ h.socials.x }}</p>
                                         <svg width="11" height="11" class="header-menu__social-svg" viewBox="0 0 11 11" fill="none" xmlns="http://www.w3.org/2000/svg"> <path d="M0.704711 9.59487C0.636407 9.52661 0.582222 9.44555 0.545254 9.35635C0.508285 9.26714 0.489258 9.17152 0.489258 9.07495C0.489258 8.97839 0.508285 8.88277 0.545254 8.79356C0.582222 8.70435 0.636407 8.6233 0.704711 8.55504L9.0351 0.224643C9.10288 0.154408 9.18396 0.0983749 9.27362 0.0598108C9.36328 0.0212467 9.45972 0.00092468 9.55731 3.0886e-05C9.65491 -0.000862908 9.75171 0.0176892 9.84206 0.0546048C9.93241 0.0915204 10.0145 0.146061 10.0835 0.215042C10.1526 0.284024 10.2072 0.366065 10.2442 0.456381C10.2812 0.546696 10.2999 0.643476 10.2991 0.741073C10.2983 0.838671 10.278 0.935131 10.2395 1.02483C10.2011 1.11452 10.1451 1.19565 10.0749 1.26349L1.74454 9.59389C1.60672 9.73153 1.4199 9.80885 1.22512 9.80885C1.03033 9.80885 0.84351 9.73153 0.705691 9.59389L0.704711 9.59487Z" fill="none"/> <path d="M0 0.74461C0 0.549666 0.0774408 0.362707 0.215287 0.224861C0.353132 0.0870154 0.540091 0.00957504 0.735035 0.00957504L9.55545 0.00957504C9.75039 0.00957504 9.93735 0.0870154 10.0752 0.224861C10.213 0.362707 10.2905 0.549666 10.2905 0.74461L10.2905 9.56503C10.2905 9.75997 10.213 9.94693 10.0752 10.0848C9.93735 10.2226 9.75039 10.3001 9.55545 10.3001C9.36051 10.3001 9.17355 10.2226 9.0357 10.0848C8.89786 9.94693 8.82042 9.75997 8.82042 9.56503L8.82042 1.47964L0.735035 1.47964C0.540091 1.47964 0.353132 1.4022 0.215287 1.26436C0.0774408 1.12651 0 0.939553 0 0.74461Z" fill="none"/> </svg>
                                     </a>
                                 </div>
 
                                 <div class="header-menu__social">
                                     <a href="#" class="header-menu__social-link header-animation">
-                                        <p class="header-menu__social-text">Instagram</p>
+                                        <p class="header-menu__social-text">{{ h.socials.instagram }}</p>
                                         <svg width="11" height="11" class="header-menu__social-svg" viewBox="0 0 11 11" fill="none" xmlns="http://www.w3.org/2000/svg"> <path d="M0.704711 9.59487C0.636407 9.52661 0.582222 9.44555 0.545254 9.35635C0.508285 9.26714 0.489258 9.17152 0.489258 9.07495C0.489258 8.97839 0.508285 8.88277 0.545254 8.79356C0.582222 8.70435 0.636407 8.6233 0.704711 8.55504L9.0351 0.224643C9.10288 0.154408 9.18396 0.0983749 9.27362 0.0598108C9.36328 0.0212467 9.45972 0.00092468 9.55731 3.0886e-05C9.65491 -0.000862908 9.75171 0.0176892 9.84206 0.0546048C9.93241 0.0915204 10.0145 0.146061 10.0835 0.215042C10.1526 0.284024 10.2072 0.366065 10.2442 0.456381C10.2812 0.546696 10.2999 0.643476 10.2991 0.741073C10.2983 0.838671 10.278 0.935131 10.2395 1.02483C10.2011 1.11452 10.1451 1.19565 10.0749 1.26349L1.74454 9.59389C1.60672 9.73153 1.4199 9.80885 1.22512 9.80885C1.03033 9.80885 0.84351 9.73153 0.705691 9.59389L0.704711 9.59487Z" fill="none"/> <path d="M0 0.74461C0 0.549666 0.0774408 0.362707 0.215287 0.224861C0.353132 0.0870154 0.540091 0.00957504 0.735035 0.00957504L9.55545 0.00957504C9.75039 0.00957504 9.93735 0.0870154 10.0752 0.224861C10.213 0.362707 10.2905 0.549666 10.2905 0.74461L10.2905 9.56503C10.2905 9.75997 10.213 9.94693 10.0752 10.0848C9.93735 10.2226 9.75039 10.3001 9.55545 10.3001C9.36051 10.3001 9.17355 10.2226 9.0357 10.0848C8.89786 9.94693 8.82042 9.75997 8.82042 9.56503L8.82042 1.47964L0.735035 1.47964C0.540091 1.47964 0.353132 1.4022 0.215287 1.26436C0.0774408 1.12651 0 0.939553 0 0.74461Z" fill="none"/> </svg>
                                     </a>
                                 </div>
@@ -145,14 +146,14 @@
                             <div class="header-menu__block">
                                 <div class="header-menu__social">
                                     <a href="#" class="header-menu__social-link header-animation">
-                                        <p class="header-menu__social-text">LinkedIn</p>
+                                        <p class="header-menu__social-text">{{ h.socials.linkedin }}</p>
                                         <svg width="11" height="11" class="header-menu__social-svg" viewBox="0 0 11 11" fill="none" xmlns="http://www.w3.org/2000/svg"> <path d="M0.704711 9.59487C0.636407 9.52661 0.582222 9.44555 0.545254 9.35635C0.508285 9.26714 0.489258 9.17152 0.489258 9.07495C0.489258 8.97839 0.508285 8.88277 0.545254 8.79356C0.582222 8.70435 0.636407 8.6233 0.704711 8.55504L9.0351 0.224643C9.10288 0.154408 9.18396 0.0983749 9.27362 0.0598108C9.36328 0.0212467 9.45972 0.00092468 9.55731 3.0886e-05C9.65491 -0.000862908 9.75171 0.0176892 9.84206 0.0546048C9.93241 0.0915204 10.0145 0.146061 10.0835 0.215042C10.1526 0.284024 10.2072 0.366065 10.2442 0.456381C10.2812 0.546696 10.2999 0.643476 10.2991 0.741073C10.2983 0.838671 10.278 0.935131 10.2395 1.02483C10.2011 1.11452 10.1451 1.19565 10.0749 1.26349L1.74454 9.59389C1.60672 9.73153 1.4199 9.80885 1.22512 9.80885C1.03033 9.80885 0.84351 9.73153 0.705691 9.59389L0.704711 9.59487Z" fill="none"/> <path d="M0 0.74461C0 0.549666 0.0774408 0.362707 0.215287 0.224861C0.353132 0.0870154 0.540091 0.00957504 0.735035 0.00957504L9.55545 0.00957504C9.75039 0.00957504 9.93735 0.0870154 10.0752 0.224861C10.213 0.362707 10.2905 0.549666 10.2905 0.74461L10.2905 9.56503C10.2905 9.75997 10.213 9.94693 10.0752 10.0848C9.93735 10.2226 9.75039 10.3001 9.55545 10.3001C9.36051 10.3001 9.17355 10.2226 9.0357 10.0848C8.89786 9.94693 8.82042 9.75997 8.82042 9.56503L8.82042 1.47964L0.735035 1.47964C0.540091 1.47964 0.353132 1.4022 0.215287 1.26436C0.0774408 1.12651 0 0.939553 0 0.74461Z" fill="none"/> </svg>
                                     </a>
                                 </div>
 
                                 <div class="header-menu__social">
                                     <a href="#" class="header-menu__social-link header-animation">
-                                        <p class="header-menu__social-text">Behance</p>
+                                        <p class="header-menu__social-text">{{ h.socials.behance }}</p>
                                         <svg width="11" height="11" class="header-menu__social-svg" viewBox="0 0 11 11" fill="none" xmlns="http://www.w3.org/2000/svg"> <path d="M0.704711 9.59487C0.636407 9.52661 0.582222 9.44555 0.545254 9.35635C0.508285 9.26714 0.489258 9.17152 0.489258 9.07495C0.489258 8.97839 0.508285 8.88277 0.545254 8.79356C0.582222 8.70435 0.636407 8.6233 0.704711 8.55504L9.0351 0.224643C9.10288 0.154408 9.18396 0.0983749 9.27362 0.0598108C9.36328 0.0212467 9.45972 0.00092468 9.55731 3.0886e-05C9.65491 -0.000862908 9.75171 0.0176892 9.84206 0.0546048C9.93241 0.0915204 10.0145 0.146061 10.0835 0.215042C10.1526 0.284024 10.2072 0.366065 10.2442 0.456381C10.2812 0.546696 10.2999 0.643476 10.2991 0.741073C10.2983 0.838671 10.278 0.935131 10.2395 1.02483C10.2011 1.11452 10.1451 1.19565 10.0749 1.26349L1.74454 9.59389C1.60672 9.73153 1.4199 9.80885 1.22512 9.80885C1.03033 9.80885 0.84351 9.73153 0.705691 9.59389L0.704711 9.59487Z" fill="none"/> <path d="M0 0.74461C0 0.549666 0.0774408 0.362707 0.215287 0.224861C0.353132 0.0870154 0.540091 0.00957504 0.735035 0.00957504L9.55545 0.00957504C9.75039 0.00957504 9.93735 0.0870154 10.0752 0.224861C10.213 0.362707 10.2905 0.549666 10.2905 0.74461L10.2905 9.56503C10.2905 9.75997 10.213 9.94693 10.0752 10.0848C9.93735 10.2226 9.75039 10.3001 9.55545 10.3001C9.36051 10.3001 9.17355 10.2226 9.0357 10.0848C8.89786 9.94693 8.82042 9.75997 8.82042 9.56503L8.82042 1.47964L0.735035 1.47964C0.540091 1.47964 0.353132 1.4022 0.215287 1.26436C0.0774408 1.12651 0 0.939553 0 0.74461Z" fill="none"/> </svg>
                                     </a>
                                 </div>
