--- a/src/includes/components/work_together.html
+++ b/src/includes/components/work_together.html
@@ -1,3 +1,6 @@
+{% set lang = lang | default(locales.default) %}
+{% set t = (i18n.work_together[lang] if i18n and i18n.work_together and i18n.work_together[lang] else {}) %}
+
 <link rel="stylesheet" href="/css/components/work_together.css">
 
 <section class="work-together">
@@ -8,10 +11,10 @@
         </div>
 
         <div class="work-together__content">
-            <h3 class="text-140 work-together__title">LET’S WORK TOGETHER</h3>
+            <h3 class="text-140 work-together__title">{{ t.lets_work_together }}</h3>
 
             <div class="work-together__footer">
-                <p class="text-24 work-together__text">Have a project in mind? We’d love to hear about it.Let’s create something great together!</p>
+                <p class="text-24 work-together__text">{{ t.have_a_project_in_mind_wed }}</p>
                 {% btn "GET IN TOUCH", "//", "btn-arrow work-together__button" %}
             </div>
         </div>
