--- a/src/includes/components/work_together.html
+++ b/src/includes/components/work_together.html
@@ -15,7 +15,7 @@
 
             <div class="work-together__footer">
                 <p class="text-24 work-together__text">{{ t.have_a_project_in_mind_wed }}</p>
-                {% btn "GET IN TOUCH", "//", "btn-arrow work-together__button" %}
+                {% btn "GET IN TOUCH", "//", "work-together__button" %}
             </div>
         </div>
     </div>
