--- a/src/includes/components/faq.html
+++ b/src/includes/components/faq.html
@@ -10,7 +10,7 @@
             <h2 class="text-140 faq__title">{{ t.faq }}</h2>
             <div class="faq__contact">
                 <p class="text-16 faq__contact-text">{{ t.got_specific_questions }}</p>
-                <a href="" class="text-16 faq__contact-link">{{ t.contact_us }}</a>
+                <a href="{{ base }}/contact/" class="text-16 faq__contact-link">{{ t.contact_us }}</a>
             </div>
         </div>
         <div class="faq__list">
